# skaffold-example

./: .gitignore  README.md  skaffold.yaml
backend/: Cargo.toml  Dockerfile  deployment.yaml
backend/src/: main.rs
frontend/: Dockerfile  README.md  angular.json  deployment.yaml  package-lock.json  package.json  server.ts
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/models/: text.model.ts
