[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
serde = {version = "1.0.194", features = ["derive"]}
sysinfo = { version = "0.30.5" }
tokio = {version = "1.35.1", features = ["full"]}
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
